--- a/META.yml
+++ b/META.yml
@@ -2,11 +2,10 @@
 abstract: 'SQLite driver for App::Milter::Limit'
 author:
   - 'Michael Schout <mschout@cpan.org>'
-build_requires:
-  Test::More: 0
+build_requires: {}
 configure_requires:
-  ExtUtils::MakeMaker: 6.31
-generated_by: 'Dist::Zilla version 2.100880'
+  ExtUtils::MakeMaker: 6.11
+generated_by: 'Dist::Zilla version 1.100760'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,8 +18,11 @@ requires:
   Class::Accessor: 0
   DBI: 0
   File::Spec: 0
+  Module::Signature: 0
+  Socket: 0
+  Test::More: 0
 resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=App-Milter-Limit-Plugin-SQLite
   homepage: http://search.cpan.org/dist/App-Milter-Limit-Plugin-SQLite/
   repository: http://github.com/mschout/milter-limit-plugin-sqlite
-version: 0.50
+version: 0.51
